--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ const navItems = [
   { name: "Home", path: "/" },
   { name: "About", path: "/about" },
   { name: "Projects", path: "/projects" },
+  { name: "Services", path: "/services" },
   { name: "Blog", path: "/blog", external: true },
   { name: "Open Source", path: "/open-source" },
   { name: "Contact", path: "/contact" },
